hard-gists/6874944/run.log
=== Docker Run Log for 6874944 ===
Started at: Mi 29. Okt 16:44:17 CET 2025

[2025-10-29 16:44:18] START: Running container for 6874944
[2025-10-29 16:44:18] SUCCESS: Container 41dad9b7dd3bb6c4e6a445648c7c15958ed78d0813a0a7a8d616b4e01554293a started for 6874944
=== Container logs for 6874944 ===
  File "/snippet.py", line 73
    print mat.GetName()
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6874944 ===
[2025-10-29 16:44:20] INFO: Container 41dad9b7dd3bb6c4e6a445648c7c15958ed78d0813a0a7a8d616b4e01554293a has stopped
